--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,3 +1,11 @@
-<% provide(:title, "Home") %>
-<h1>StaticPage#home</h1>
-<p>Find me in app/views/static_page/home.html.erb</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Ven shop</h1>
+
+  <h2>
+    This is the home page for the
+    VenShop application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
