--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -13,6 +13,6 @@
   </p>
 <% else %>
   <% @order_items.each do |order_item| %>
-    <%= render 'carts/cart_row', product: order_item.product, order_item: order_item, show_total: true %>
+    <%= render partial: 'carts/cart_row', locals: { product: order_item.product, order_item: order_item, show_total: true }%>
   <% end %>
 <% end %>
