--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <div class="row">
+      <%= form_tag search_products_path, method: :get do %>
+        <div class="col-xs-4">
+          <%= text_field_tag :search, params[:search], class: "form-control" %>
+        </div>
+        <div class="col-xs-2">
+          <%= submit_tag "Search", class: "btn btn-primary", name: nil %>
+        </div>
+      <% end %>
+      </div>
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
