--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,17 +1,9 @@
+<% provide(:title, (@category ? @category.name : '') ) %>
 <div class="row">
-  <aside class="col-md-3">
-  	<h2 class="text-left"><%= link_to 'Home', root_path%> >> <%= @category ? @category.name : '' %></h2>
-    <section class="user_info">
-    <% @categories.each do |category| %>
-      <h1><%= link_to category.name, products_path(category: category.id) %></h1>
-    <% end %>
-    </section>
-  </aside>
-
+  <%= render "left_menu" %>
   <div class="col-md-9 border_left">
   	<h3 class="text-left"><%= @category ? @category.name : 'News Items' %></h3>
   	<%= will_paginate %>
-  <!--<div class="col-xs-6 col-xs-offset-3">-->
     <% @products.each do |product| %>
       <%= render "product_row", product: product, order_item: @order_item %>
     <% end %>
