update view product show

--- a/app/views/products/_product_row.html.erb
+++ b/app/views/products/_product_row.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-xs-8">
-      <h4><%= link_to "#{product.name}", product_path(product.id) %></small></h4>
+      <h4><%= link_to product.name, product_path(product.id) %></small></h4>
     </div>
     <div class="col-xs-4">
       
