--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -4,8 +4,6 @@
 
   <div class="col-md-9 border_left">
     <h3 class="text-left"><%= pluralize(@numFound, "product") %> found</h3>
-    <% @products.each do |product| %>
-      <%= render "product_row", product: product, order_item: @order_item %>
-    <% end %>
+    <%=  render partial: "product_row", collection: @products, as: :product, locals: { order_item: @order_item } %>
   </div>
 </div>
